Fix wrapping of eresources in list.

--- a/stylesheets/scss/_eresource.scss
+++ b/stylesheets/scss/_eresource.scss
@@ -2,6 +2,7 @@
   padding-left: 0;
   & > li {
     @include content-box;
+    @include clearfix;
     position: relative;
     .views-field-title a{
       @include heading2;
